third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/inline-table/duplicate-key-3.stderr
TOML parse error at line 1, column 8
  |
1 | tbl = { fruit = { apple.color = "red" }, fruit.apple.texture = { smooth = true } }
  |        ^
duplicate key `fruit`
